# mo2-notes

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  plugindefinition.json
.github/workflows/: build.yml
src/: .ts.ignore  CMakeLists.txt  mo2_notes_en.ts  resources.qrc
src/gui/: DefaultContent.h  NotesWebPage.cpp  NotesWebPage.h  NotesWidget.cpp  NotesWidget.h  UrlRequestInterceptor.cpp  UrlRequestInterceptor.h
src/plugin/: IPanelInterface.h  IPluginPanel.cpp  IPluginPanel.h  MO2Notes.cpp  MO2Notes.h  MOPanelInterface.h
src/resources/: editor_style.css  notes_style.css
